tests/ui/consts/const-eval/ub-invalid-values.stderr
error[E0080]: evaluation of constant value failed
  --> $DIR/ub-invalid-values.rs:8:5
   |
LL |     bool_cast(&v as *const u8 as *const bool);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ interpreting an invalid 8-bit value as a bool: 0x03
   |
note: inside `bool_cast`
  --> $DIR/ub-invalid-values.rs:2:16
   |
LL |     let _val = *ptr as u32;
   |                ^^^^^^^^^^^ the failure occurred here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
